--- a/components/apimgt/org.wso2.carbon.apimgt.rest.api.publisher/src/main/resources/publisher-api.yaml
+++ b/components/apimgt/org.wso2.carbon.apimgt.rest.api.publisher/src/main/resources/publisher-api.yaml
@@ -3246,6 +3246,9 @@ definitions:
         items:
           type: string
         example: ["substract","add"]
+      hasOwnGateway:
+        type: boolean
+        default: false
       labels:
         type: array
         items:
