--- a/components/apimgt/org.wso2.carbon.apimgt.rest.api.store/src/main/resources/store-api.yaml
+++ b/components/apimgt/org.wso2.carbon.apimgt.rest.api.store/src/main/resources/store-api.yaml
@@ -2835,6 +2835,9 @@ definitions:
           description: |
             Supported transports for the API (http and/or https).
           type: string
+      hasOwnGateway:
+        type: boolean
+        default: false
       labels:
         type: array
         items:
