--- a/components/apimgt/org.wso2.carbon.apimgt.core/pom.xml
+++ b/components/apimgt/org.wso2.carbon.apimgt.core/pom.xml
@@ -208,6 +208,17 @@
             <groupId>org.wso2.msf4j</groupId>
             <artifactId>msf4j-core</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.fabric8/kubernetes-client -->
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-client</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-assertions</artifactId>
+            <version>2.2.209</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
