fixing build errors

--- a/components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/container_deployment_template.yaml
+++ b/components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/container_deployment_template.yaml
@@ -17,7 +17,7 @@ spec:
         gateway: ${gatewayLabel}
     spec:
       containers:
-      - image: wso2apim-gateway-3.0.0-SNAPSHOT:3.0.0
+      - image: wso2apim-gateway:3.0.0
         name: ${containerName}
         imagePullPolicy: Always
         ports:
