--- a/components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/activemq-service.yaml
+++ b/components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/activemq-service.yaml
@@ -14,30 +14,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ${serviceName}
+  name: activemq
   namespace: ${namespace}
   labels:
-    gateway: ${gatewayLabel}  # should have the auto-generated label as the value
+    app: activemq
+    tier: prod
+    gateway: ${gatewayLabel}
 spec:
-  type: LoadBalancer
-  externalTrafficPolicy: Local
+  type: ClusterIP
   ports:
     # ports that this service should serve on
     -
-      name: 'pass-through-http'
-      port: 9090
-      targetPort: 9090
-      nodePort: 32001
-    -
-      name: 'pass-through-https'
-      port: 9092
-      targetPort: 9092
-      nodePort: 32002
-  status:
-    loadBalancer:
-      ingress:
-        - ip: ${loadBalancerIP}
+      name: 'tcp'
+      protocol: TCP
+      port: 61616
+      targetPort: 61616
   # label keys and values that must match in order to receive traffic for this service
   selector:
-    gateway: ${gatewayLabel}
-
+    app: activemq
+    tier: prod
+    gateway: ${gatewayLabel} # Since we need to stop the service when the gateway stops
