--- a/components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/container_service_template.yaml
+++ b/components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/container_service_template.yaml
@@ -18,6 +18,7 @@ metadata:
   namespace: ${namespace}
   labels:
     gateway: ${gatewayLabel}  # should have the auto-generated label as the value
+    tier: prod
 spec:
   type: NodePort
   ports:
